@@ -22,6 +22,11 @@ Summary of important user-visible changes for version 4.2:
     "luminance profile" and is also more similar to Matlab's new default
     colormap "parula".
 
+ ** When starting, Octave now looks in the function path for a file
+    startup.m and executes any commands found there.  This change was made
+    to accommodate Matlab users.  Octave has it's own configuration
+    system based on the file .octaverc which is preferred.
+
  ** Octal ('\NNN') and hex ('\xNN') escape sequences in single quoted
     strings are now interpreted by the function do_string_escapes().
     The *printf family of functions now supports octal and hex escape
